<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.onboarding.EnterPhoneNumberFragment"
    android:background="@color/white"
    android:paddingHorizontal="20dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/enterPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_number"
        android:layout_marginBottom="180dp"
        style="@style/TextAppearance.Headline1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ghana_code_layout"
        android:layout_width="92dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterPhone"
        android:background="@drawable/textfield_background"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="10dp">

        <ImageView
            android:id="@+id/ghana_logo"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ghana_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/logo" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ghana_code"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ghana_logo"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>





    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtClubName"
        android:layout_width="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        android:theme="@style/Widget.App.TextInputLayout"
        android:layout_marginStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ghana_code_layout"
        app:layout_constraintBottom_toBottomOf="@id/ghana_code_layout"
        app:layout_constraintTop_toTopOf="@id/ghana_code_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.App.TextInputEditText"
            android:hint="@string/phone_number"
            android:imeOptions="actionNext"
            android:digits="0123456789"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="16dp" />

    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/actionBarSize"
        android:text="@string/termsText"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:fontFamily="@font/manjari_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        style="@style/solidButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/color_green"
        android:text="@string/continue_text"
        android:textFontWeight="500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ghana_code_layout" />




</androidx.constraintlayout.widget.ConstraintLayout>